--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -150,6 +150,73 @@ body {
     line-height: 26px;
 }
 
+.layout-container .layout-content .component-container {}
+
+.layout-container .layout-content .component-container .component-title {
+    font-size: 28px;
+    font-weight: 400;
+    color: #1f2f3d;
+}
+
+.layout-container .layout-content .component-container .component-description {
+    font-size: 14px;
+    color: #5e6d82;
+    line-height: 18px;
+    margin: 10px 0;
+}
+
+.layout-container .layout-content .component-container .component-example {}
+
+.layout-container .layout-content .component-container .component-example .component-example-title {
+    display: block;
+    font-size: 22px;
+    font-weight: 400;
+    color: #1f2f3d;
+    margin:40px 0 20px;
+}
+
+.layout-container .layout-content .component-container .component-example .component-example-description {
+    font-size: 14px;
+    color: #5e6d82;
+    line-height: 18px;
+    margin: 10px 0;
+}
+
+.layout-container .layout-content .component-container .component-example .component-example-content {}
+
+.layout-container .layout-content .component-container .component-example .component-example-content .source {
+    padding: 24px;
+    border:1px solid #ebebeb;
+}
+
+.layout-container .layout-content .component-container .component-example .component-example-content .example {}
+
+.layout-container .layout-content .component-container .component-use {}
+
+.layout-container .layout-content .component-container .component-use h4 {
+    font-size: 22px;
+    font-weight: 400;
+    color: #1f2f3d;
+    padding: 40px 0 20px;
+}
+
+.layout-container .layout-content .component-container .component-use table {
+    width: 100%;
+    color: #909399;
+}
+
+.layout-container .layout-content .component-container .component-use table thead tr th {
+    text-align: left;
+    padding: 10px 20px;
+    border-bottom: 1px solid #dcdfe6;
+}
+
+.layout-container .layout-content .component-container .component-use table tbody tr td {
+    text-align: left;
+    padding: 10px 20px;
+    border-bottom: 1px solid #dcdfe6;
+}
+
 
 /* 日食 深色主题 */
 
