--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -126,17 +126,31 @@ body {
     padding: 5px 10px;
 }
 
+.ai-layout-sidebar .ai-layout-sidebar-content .ai-layout-sidebar-title {
+    margin-top: 15px;
+    font-size: 16px;
+    color: #333;
+    line-height: 40px;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    display: block;
+    position: relative;
+    transition: .15s ease-out;
+    font-weight: 700;
+}
+
 .ai-layout-sidebar .ai-layout-sidebar-content .ai-nav-item .ai-nav-name {
     display: block;
     height: 40px;
     color: #444;
     line-height: 40px;
-    font-size: 16px;
+    font-size: 14px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    font-weight: bold;
-    cursor: pointer;
+    font-weight: 400;
 }
 
 .ai-layout-sidebar .ai-layout-sidebar-content .ai-nav-item .ai-nav-name:hover {
@@ -172,7 +186,7 @@ body {
     font-size: 22px;
     font-weight: 400;
     color: #1f2f3d;
-    margin:40px 0 20px;
+    margin: 40px 0 20px;
 }
 
 .ai-layout-container .ai-layout-content .component-container .component-example .component-example-description {
@@ -186,7 +200,7 @@ body {
 
 .ai-layout-container .ai-layout-content .component-container .component-example .component-example-content .source {
     padding: 24px;
-    border:1px solid #ebebeb;
+    border: 1px solid #ebebeb;
 }
 
 .ai-layout-container .ai-layout-content .component-container .component-example .component-example-content .example {}
