--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -171,12 +171,15 @@ body {
     color: #409eff;
 }
 
-.ai-layout-container .ai-layout-content .component-container {}
+.ai-layout-container .ai-layout-content .component-container {
+    display: block;
+}
 
 .ai-layout-container .ai-layout-content .component-container .component-title {
-    font-size: 28px;
+    font-size: 24px;
     font-weight: 400;
-    color: #1f2f3d;
+    color: rgba(51, 51, 51, 1);
+    margin-top: 40px;
 }
 
 .ai-layout-container .ai-layout-content .component-container .component-description {
@@ -190,16 +193,16 @@ body {
 
 .ai-layout-container .ai-layout-content .component-container .component-example .component-example-title {
     display: block;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 400;
-    color: #1f2f3d;
-    margin: 40px 0 20px;
+    color: #333333;
+    margin: 40px 0 8px;
 }
 
 .ai-layout-container .ai-layout-content .component-container .component-example .component-example-description {
     font-size: 14px;
-    color: #5e6d82;
-    line-height: 18px;
+    color: #B8B8B8;
+    line-height: 14px;
     margin: 10px 0;
 }
 
@@ -207,7 +210,6 @@ body {
 
 .ai-layout-container .ai-layout-content .component-container .component-example .component-example-content .source {
     padding: 24px;
-    border: 1px solid #ebebeb;
 }
 
 .ai-layout-container .ai-layout-content .component-container .component-example .component-example-content .source .title {
@@ -220,9 +222,9 @@ body {
 .ai-layout-container .ai-layout-content .component-container .component-use {}
 
 .ai-layout-container .ai-layout-content .component-container .component-use h4 {
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 400;
-    color: #1f2f3d;
+    color: #333333;
     padding: 40px 0 20px;
 }
 
@@ -234,13 +236,11 @@ body {
 .ai-layout-container .ai-layout-content .component-container .component-use table thead tr th {
     text-align: left;
     padding: 10px 20px;
-    border-bottom: 1px solid #dcdfe6;
 }
 
 .ai-layout-container .ai-layout-content .component-container .component-use table tbody tr td {
     text-align: left;
     padding: 10px 20px;
-    border-bottom: 1px solid #dcdfe6;
 }
 
 
